--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>jsf2_test</module>
+        <module>jsf2</module>
+        <module>jersey</module>
     </modules>
     <dependencyManagement>
         <dependencies>
@@ -106,37 +107,7 @@
                 <version>2.4</version>
             </dependency>
 
-            <!-- Local -->
-            <dependency>
-                <groupId>com.apicentral</groupId>
-                <artifactId>domain</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.apicentral</groupId>
-                <artifactId>util</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.apicentral</groupId>
-                <artifactId>exception</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.apicentral</groupId>
-                <artifactId>dto</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.apicentral</groupId>
-                <artifactId>authorization</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.apicentral</groupId>
-                <artifactId>validation</artifactId>
-                <version>${project.version}</version>
-            </dependency>
+
 
             <!-- JSF -->
             <dependency>
@@ -204,22 +175,7 @@
                 <version>1.2</version>
             </dependency>
 
-            <!-- js -->
-            <dependency>
-                <groupId>com.efsavage.twitter.bootstrap</groupId>
-                <artifactId>bootstrap-maven</artifactId>
-                <version>2.3.1</version>
-            </dependency>
-            <dependency>
-                <groupId>org.webjars</groupId>
-                <artifactId>angularjs</artifactId>
-                <version>1.3.0-rc.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.efsavage.jquery</groupId>
-                <artifactId>jquery-maven</artifactId>
-                <version>1.7.2</version>
-            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
