Angular JS initial commit.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>jersey</module>
         <module>struts2</module>
         <module>domain</module>
+        <module>angularjs</module>
     </modules>
     <dependencyManagement>
         <dependencies>
