Completed AngularJS/REST simple application. Refactored 'Jersey' module to 'rest_api. Made minor changes to the domain module to support the Angular module. Made aesthetic changes to the Struts 2 module, and began work on the JSF2 module.

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>jsf2</module>
-        <module>jersey</module>
+        <module>rest_api</module>
         <module>struts2</module>
         <module>domain</module>
         <module>angularjs</module>
