--- a/angularjs/pom.xml
+++ b/angularjs/pom.xml
@@ -8,8 +8,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>angularjs</artifactId>
-
-
+    <packaging>war</packaging>
+    <build>
+        <finalName>angularjs</finalName>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
+    </build>
 </project>
