--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>struts2</module>
         <module>domain</module>
         <module>angularjs</module>
+        <module>wicket6</module>
     </modules>
     <dependencyManagement>
         <dependencies>
