--- a/jsf2/pom.xml
+++ b/jsf2/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>javax.servlet.jsp-api</artifactId>
             <scope>compile</scope>
         </dependency>
+        <!-- Local -->
+        <dependency>
+            <groupId>com.mypitech.experior</groupId>
+            <artifactId>domain</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>jsf2</finalName>
