--- a/jsf2/src/main/webapp/WEB-INF/web.xml
+++ b/jsf2/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
          id="WebApp_ID" version="3.0">
     <display-name>HelloJSF</display-name>
     <welcome-file-list>
-        <welcome-file>faces/index.jsf</welcome-file>
+        <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
