--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,16 @@
                 <artifactId>wicket-extensions</artifactId>
                 <version>6.15.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.wicket</groupId>
+                <artifactId>wicket-cdi</artifactId>
+                <version>6.15.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wicketstuff</groupId>
+                <artifactId>wicketstuff-javaee-inject</artifactId>
+                <version>6.15.0</version>
+            </dependency>
 
             <!-- HTTP -->
             <dependency>
