--- a/wicket6/pom.xml
+++ b/wicket6/pom.xml
@@ -38,12 +38,47 @@
             <scope>compile</scope>
         </dependency>
 
-        <!-- Local -->
+        <!-- ORM  -->
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- Mapping  -->
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- Time -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <!-- Local -->
+       <!-- <dependency>
             <groupId>com.mypitech.experior</groupId>
             <artifactId>domain</artifactId>
             <scope>compile</scope>
-        </dependency>
+        </dependency>-->
     </dependencies>
     <build>
         <finalName>wicket6</finalName>
