--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>domain</module>
         <module>angularjs</module>
         <module>wicket6</module>
+        <module>spring4</module>
     </modules>
     <dependencyManagement>
         <dependencies>
@@ -41,6 +42,30 @@
                 <artifactId>java-uuid-generator</artifactId>
                 <version>3.1.3</version>
                 <scope>compile</scope>
+            </dependency>
+
+            <!--Spring-->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>4.1.1.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>4.1.1.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+                <version>4.1.1.RELEASE</version>
+            </dependency>
+
+            <!--JSTL-->
+            <dependency>
+                <groupId>jstl</groupId>
+                <artifactId>jstl</artifactId>
+                <version>1.2</version>
             </dependency>
 
             <!-- Mapping  -->
