--- a/wicket6/src/main/webapp/WEB-INF/web.xml
+++ b/wicket6/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,10 @@
             <param-name>applicationClassName</param-name>
             <param-value>com.mypitech.experior.wicket6.Wicket6</param-value>
         </init-param>
+        <init-param>
+            <param-name>configuration</param-name>
+            <param-value>deployment</param-value>
+        </init-param>
     </filter>
     <filter-mapping>
         <filter-name>wicketFilter</filter-name>
